--- a/lib/parent.html
+++ b/lib/parent.html
@@ -1,8 +1,11 @@
-<!--ПАПА-->
+
+parent
+<hr>
+
 <!--<hr>-->
 
-<!--{{child}}-->
-<!--<hr>-->
+<!-- {{child}} -->
+<hr>
 
 <!--<div *ngFor="let hero of child">-->
 <!--    1-->
@@ -10,10 +13,10 @@
 <!--</div>-->
 <!--<hr>-->
 
-<!--<div *ngFor="let hero of children">-->
-<!--    <hero></hero>-->
-<!--</div>-->
-<!--<hr>-->
+<div *ngFor="let hero of children">-->
+   <hero></hero>
+</div>
+<hr>
 
 <!--<div *ngFor="let hero of children">-->
 <!--    <hero></hero>-->
@@ -27,4 +30,17 @@
 <!--</div>-->
 <!--<child></child>-->
 <!--{{child}}-->
+<!-- <hr> -->
+<!-- <after-content> -->
+    <!-- <child-component></child-component> -->
+    <!-- <children></children> -->
+    <!-- <contentChild></contentChild> -->
+<!-- </after-content> -->
+
+
+<contentChild></contentChild>
+<hr>
+{{contentChild}}
+<hr>
+
 <hr>
